--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "mean-template",
+  "name": "cap-runner",
   "version": "0.0.0",
-  "homepage": "https://github.com/nss-cohort-2014-06-07/mean-template",
+  "homepage": "https://github.com/bchiatt/cap-runner",
   "authors": [
-    "Chyld Medford <chyld.medford@gmail.com>"
+    "Brian Hiatt <brian.hiatt41@gmail.com>"
   ],
-  "description": "The MEAN Template",
+  "description": "Capstone1 @ NSS: rehab scheduler and RUG calculator.",
   "license": "MIT",
   "dependencies": {
     "angular": "1.3.0-rc.2",
@@ -15,6 +15,8 @@
     "fontawesome": "~4.2.0",
     "underscore": "~1.7.0",
     "jquery": "~2.1.1",
-    "toastr": "~2.0.3"
+    "toastr": "~2.0.3",
+    "angular-bootstrap": "~0.11.0",
+    "ng-table": "~0.3.3"
   }
 }
