--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "grunt-shell": "^1.1.1",
     "jshint-stylish": "^1.0.0",
     "mocha": "^1.21.4",
-    "mocha-lcov-reporter": "0.0.1"
+    "mocha-lcov-reporter": "0.0.1",
+    "supertest": "^0.13.0"
   }
 }
