--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "jquery": "~2.1.1",
     "toastr": "~2.0.3",
     "angular-bootstrap": "~0.11.0",
-    "ng-table": "~0.3.3"
+    "ng-table": "~0.3.3",
+    "ng-file-upload": "~1.6.8"
   }
 }
