--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "toastr": "~2.0.3",
     "angular-bootstrap": "~0.11.0",
     "ng-table": "~0.3.3",
-    "ng-file-upload": "~1.6.8"
+    "ng-file-upload": "~1.6.8",
+    "angular-ui-utils": "~0.1.1"
   }
 }
